# django-ninja

./: .coveragerc  .dockerignore  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  Pipfile  README.md  WHATSNEW_V1.md  mypy.ini  pyproject.toml  requirements.dev.txt  requirements.txt  setup.py
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  question.md
.github/workflows/: close-old-issues.yml  docs.yml  publish.yml  test.yml  test_full.yml
decorators/paginate/: decorator.py  schema.py
docs/: mkdocs.yml  requirements.txt
docs/docs/: async-support.md  chat.md  extra.css  help.md  index.md  motivation.md  pydantic-migration.md  releases.md  video.md  whatsnew_v1.md
docs/docs/guides/: api-docs.md  async-support.md  authentication.md  caching.md  custom-schema-generator.md  decorators.md  errors.md  model-api.md  routers.md  testing.md  throttling.md  urls.md  versioning.md
docs/docs/guides/input/: body.md  file-params.md  filtering.md  form-params.md  header.md  operations.md  ordering.md  path-params.md  query-params.md  request-parsers.md
docs/docs/guides/response/: config-pydantic.md  django-pydantic-create-schema.md  django-pydantic.md  index.md  pagination.md  response-renderers.md  temporal_response.md
docs/docs/javascripts/: ask-ai-button.js
docs/docs/proposals/: cbv.md  index.md  models.md  response-class-parser.md  responses.md  v1.md
docs/docs/reference/: api.md  csrf.md  management-commands.md  operations-parameters.md  settings.md
docs/docs/tutorial/: alternative-api-docs.md  api-docs.md  authentication.md  authorization.md  body.md  config-pydantic.md  crud.md  csrf.md  django-pydantic-create-schema.md  django-pydantic.md  errors.md  file-params.md  form-params.md  index.md  management-commands.md  operation_params.md  pagination.md  path-params.md  query-params.md  request-parsers.md  response-renderers.md  response-schema.md  routers.md  step2.md  step3.md  temporal_response.md  urls.md  versioning.md
docs/docs/tutorial/other/: course.md  crud.md  video.md
docs/src/: index001.py
docs/src/tutorial/authentication/: apikey01.py  apikey02.py  apikey03.py  basic01.py  bearer01.py  bearer02.py  code001.py  code002.py  global01.py  multiple01.py  router01.py
docs/src/tutorial/body/: code01.py  code02.py  code03.py
docs/src/tutorial/form/: code01.py  code02.py  code03.py
docs/src/tutorial/header/: code01.py  code02.py  code03.py
docs/src/tutorial/path/: code01.py  code010.py  code02.py
docs/src/tutorial/query/: code01.py  code010.py  code02.py  code03.py
ninja/: __init__.py  api_exceptions.py  api_registry.py  api_responses.py  api_routing.py  cache.py  conf.py  constants.py  decorators.py  encoders.py  errors.py  files.py  filter_schema.py  main.py  middlewares.py  operation.py  ordering_schema.py  pagination.py  params.py  params_functions.py  params_models.py  parser.py  patch_dict.py  patch_schema.py  renderers.py  responses.py  router.py  schema.py  server.py  status.py  streaming.py  throttling.py  types.py  utils.py  yaml.py
ninja/compatibility/: __init__.py  datastructures.py  files.py  request.py  streaming.py  util.py
ninja/management/: utils.py
ninja/management/commands/: export_openapi_schema.py
ninja/openapi/: __init__.py  docs.py  operation_builder.py  operation_details_builder.py  param_extractor.py  request_body_builder.py  response_builder.py  schema.py  schema_builder.py  urls.py  views.py
ninja/orm/: __init__.py  factory.py  fields.py  metaclass.py  shortcuts.py
ninja/params/: __init__.py  functions.py  models.py
ninja/security/: __init__.py  apikey.py  base.py  http.py  permission.py  session.py
ninja/signature/: __init__.py  details.py  utils.py
ninja/static/ninja/: elements-ui-bundle.7.6.5.css  elements-ui-bundle.7.6.5.js  rapidoc-9.3.3-min.js  redoc.standalone.js  redoc.standalone.js.map  redoc@2.0.0-rc.66.standalone.js  swagger-bundle-handler.js  swagger-ui-init.js
ninja/templates/ninja/: elements.html  elements_cdn.html  favicons.html  rapidoc.html  rapidoc_cdn.html  redoc.html  redoc_cdn.html  swagger.html  swagger_cdn.html
ninja/testing/: __init__.py  client.py
scripts/: build-docs.sh
tests/: client.py  conftest.py  late_router_registration_urls.py  main.py  mypy_test.py  pytest.ini  test_add_decorator.py  test_add_decorator_async.py  test_alias.py  test_alias_utils.py  test_annotated.py  test_annotations_py314.py  test_api_instance.py  test_api_instance_middlewares.py  test_api_instance_middlewares_async.py  test_app.py  test_async.py  test_async_paginate.py  test_auth.py  test_auth_async.py  test_auth_global.py  test_auth_inheritance_routers.py  test_auth_override_1699.py  test_auth_routers.py  test_body.py  test_cache.py  test_cache_async.py  test_compatibility.py  test_conf.py  test_csrf.py  test_csrf_async.py  test_cursor_pagination.py  test_custom_schema_generator.py  test_decorator.py  test_decorators.py  test_discriminator.py  test_django_models.py  test_doc_examples.py  test_enum.py  test_errors.py  (+79 more)
tests/demo_project/: manage.py
tests/demo_project/demo/: asgi.py  settings.py  urls.py  wsgi.py
tests/demo_project/late_router_registration/: api.py  apps.py  routers.py
tests/demo_project/multi_param/: api.py  asgi.py  manage.py  settings.py  urls.py  wsgi.py
tests/demo_project/someapp/: api.py  models.py
tests/env-matrix/: Dockerfile  Dockerfile.backup  README.md  create_docker.py  docker-compose.yml  install_env.sh  run.sh
tests/mock/yaml/: __init__.py
tests/test_docs/: test_auth.py  test_body.py  test_form.py  test_index.py  test_path.py  test_query.py  test_releases.py
tests/test_with_django/: test_multi_param_parsing.py
tests/test_with_django/schema_fixtures/: test-multi-body-file.json  test-multi-body-form-file.json  test-multi-body-form.json  test-multi-body.json  test-multi-cookie.json  test-multi-form-body-file.json  test-multi-form-body.json  test-multi-form-file.json  test-multi-form.json  test-multi-header.json  test-multi-path.json  test-multi-query.json
